cmake_minimum_required(VERSION 3.5)

add_compile_options(-DL_ENDIAN -DOPENSSL_SMALL_FOOTPRINT -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE -DOPENSSL_SYS_UEFI=1 -DOPENSSL_API_COMPAT=0x10101000 ${OPENSSL_FLAGS})

if(CMAKE_SYSTEM_NAME MATCHES "Windows" AND (ARCH STREQUAL "x64" OR ARCH STREQUAL "ia32"))
    if(TOOLCHAIN STREQUAL "VS2015" OR TOOLCHAIN STREQUAL "VS2019" OR TOOLCHAIN STREQUAL "VS2022" OR TOOLCHAIN STREQUAL "GCC" OR TOOLCHAIN STREQUAL "CLANG")
        add_compile_options(-DLIBSPDM_OPENSSL_STDINT_WORKAROUND)
    endif()
endif()

if (TOOLCHAIN STREQUAL "CLANG")
    add_compile_options(-Wno-everything)
endif()

if(ARCH STREQUAL "x64")
    add_compile_options(-DLIBSPDM_CPU_X64)
elseif(ARCH STREQUAL "ia32")
    add_compile_options(-DLIBSPDM_CPU_IA32)
elseif(ARCH STREQUAL "aarch64")
    add_compile_options(-DLIBSPDM_CPU_AARCH64)
elseif(ARCH STREQUAL "riscv32")
    add_compile_options(-DLIBSPDM_CPU_RISCV32)
elseif(ARCH STREQUAL "riscv64")
    add_compile_options(-DLIBSPDM_CPU_RISCV64)
elseif((ARCH STREQUAL "arm") OR (ARCH STREQUAL "aarch64"))
    add_compile_options(-DLIBSPDM_CPU_ARM)
else()
    message(FATAL_ERROR "Unknown ARCH")
endif()

add_library(openssllib STATIC "")

target_include_directories(openssllib
    PUBLIC
        ${LIBSPDM_DIR}/include
        ${LIBSPDM_DIR}/include/hal
        ${LIBSPDM_DIR}/os_stub/include
        ${LIBSPDM_DIR}/os_stub/openssllib
        ${LIBSPDM_DIR}/os_stub/openssllib/include
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl_gen
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/include
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/include
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/store
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/x509v3
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/x509
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/ui
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/txt_db
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/stack
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/siphash
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/sha
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/rsa
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/rand
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/poly1305
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/pkcs7
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/pkcs12
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/pem
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/ocsp
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/objects
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/modes
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/md5
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/lhash
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/kdf
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/hmac
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/evp
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/err
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/dso
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/ec
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/ec/curve448
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/ec/curve448/arch_32
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/dh
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/conf
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/comp
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/cmac
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/chacha
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/buffer
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/bn
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/bio
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/async
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/async/arch
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/asn1
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/aes
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/sm2
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/sm3
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/crypto/sm4
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/ms
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/providers/common/include
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/providers/implementations/include
        ${LIBSPDM_DIR}/os_stub/openssllib/openssl/providers/implementations/ciphers
)

target_sources(openssllib
    PUBLIC
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/aes/aes_cbc.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/aes/aes_cfb.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/aes/aes_core.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/aes/aes_ecb.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/aes/aes_ige.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/aes/aes_misc.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/aes/aes_ofb.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/aes/aes_wrap.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_bitstr.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_d2i_fp.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_digest.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_dup.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_gentm.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_i2d_fp.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_int.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_mbstr.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_object.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_octet.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_print.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_sign.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_strex.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_strnid.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_time.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_type.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_utctm.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_utf8.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/a_verify.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/ameth_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/asn1_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/asn1_gen.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/asn1_item_list.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/asn1_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/asn1_parse.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/asn_mime.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/asn_moid.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/asn_mstbl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/asn_pack.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/bio_asn1.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/bio_ndef.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/d2i_pr.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/d2i_pu.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/evp_asn1.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/f_int.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/f_string.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/i2d_evp.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/n_pkey.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/nsseq.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/p5_pbe.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/p5_pbev2.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/p5_scrypt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/p8_pkey.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/t_bitst.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/t_pkey.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/t_spki.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/tasn_dec.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/tasn_enc.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/tasn_fre.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/tasn_new.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/tasn_prn.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/tasn_scn.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/tasn_typ.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/tasn_utl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/x_algor.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/x_bignum.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/x_info.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/x_int64.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/x_long.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/x_pkey.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/x_sig.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/x_spki.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1/x_val.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/asn1_dsa.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/async/arch/async_null.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/async/arch/async_posix.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/async/arch/async_win.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/async/async.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/async/async_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/async/async_wait.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bf_buff.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bf_lbuf.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bf_nbio.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bf_null.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bf_prefix.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bf_readbuff.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bio_cb.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bio_dump.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bio_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bio_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bio_meth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bio_print.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bss_acpt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bss_bio.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bss_conn.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bss_core.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bss_dgram.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bss_fd.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bss_file.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bss_log.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bss_mem.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bss_null.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/bss_sock.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bio/ossl_core_bio.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_add.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_asm.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_blind.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_const.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_conv.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_ctx.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_depr.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_dh.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_div.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_exp.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_exp2.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_gcd.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_gf2m.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_intern.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_kron.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_mod.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_mont.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_mpi.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_mul.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_nist.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_prime.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_print.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_rand.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_recp.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_rsa_fips186_4.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_shift.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_sqr.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_sqrt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_srp.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_word.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bn/bn_x931p.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/bsearch.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/buffer/buf_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/buffer/buffer.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/chacha/chacha_enc.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/comp/c_zlib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/comp/comp_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/comp/comp_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/conf/conf_api.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/conf/conf_def.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/conf/conf_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/conf/conf_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/conf/conf_mall.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/conf/conf_mod.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/conf/conf_sap.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/conf/conf_ssl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/context.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/core_algorithm.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/core_namemap.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/core_fetch.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/cpt_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/cpuid.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/cryptlib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ctype.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/cversion.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/der_writer.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dh/dh_ameth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dh/dh_asn1.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dh/dh_backend.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dh/dh_check.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dh/dh_depr.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dh/dh_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dh/dh_gen.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dh/dh_group_params.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dh/dh_kdf.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dh/dh_key.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dh/dh_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dh/dh_meth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dh/dh_pmeth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dh/dh_prn.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dh/dh_rfc5114.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dso/dso_dl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dso/dso_dlfcn.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dso/dso_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dso/dso_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dso/dso_openssl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/dso/dso_win32.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ebcdic.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/curve25519.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/curve448/arch_32/f_impl32.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/curve448/arch_64/f_impl64.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/curve448/curve448.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/curve448/curve448_tables.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/curve448/eddsa.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/curve448/f_generic.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/curve448/scalar.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ec2_oct.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ec2_smpl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ec_ameth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ec_asn1.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ec_backend.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ec_check.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ec_curve.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ec_cvt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ec_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ec_key.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ec_kmeth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ec_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ec_mult.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ec_oct.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ec_pmeth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ec_print.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ecdh_kdf.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ecdh_ossl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ecdsa_ossl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ecdsa_sign.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ecdsa_vrf.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/eck_prn.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ecp_mont.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ecp_nist.c
    #    ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ecp_nistp224.c
    #    ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ecp_nistp256.c
    #    ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ecp_nistp521.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ecp_nistputil.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ecp_oct.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ecp_smpl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ecx_backend.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ecx_key.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ec/ecx_meth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/encode_decode/decoder_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/encode_decode/decoder_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/encode_decode/decoder_meth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/encode_decode/decoder_pkey.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/encode_decode/encoder_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/encode_decode/encoder_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/encode_decode/encoder_meth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/encode_decode/encoder_pkey.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/err/err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/err/err_blocks.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/err/err_prn.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/asymcipher.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/bio_b64.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/bio_enc.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/bio_md.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/bio_ok.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/c_allc.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/c_alld.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/cmeth_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/ctrl_params_translate.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/digest.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/dh_ctrl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/dh_support.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/e_aes.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/e_aes_cbc_hmac_sha1.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/e_aes_cbc_hmac_sha256.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/e_aes.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/e_chacha20_poly1305.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/e_null.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/e_old.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/e_sm4.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/e_xcbc_d.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/ec_ctrl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/ec_support.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/encode.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/evp_cnf.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/evp_enc.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/evp_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/evp_fetch.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/evp_key.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/evp_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/evp_pbe.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/evp_pkey.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/evp_rand.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/evp_utils.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/exchange.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/kdf_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/kdf_meth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/kem.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/keymgmt_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/keymgmt_meth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/legacy_md5.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/legacy_md5_sha1.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/legacy_sha.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/m_null.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/m_sigver.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/mac_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/mac_meth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/names.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/p5_crpt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/p5_crpt2.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/p_dec.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/p_enc.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/p_legacy.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/p_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/p_open.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/p_seal.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/p_sign.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/p_verify.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/pbe_scrypt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/pmeth_check.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/pmeth_gn.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/pmeth_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/evp/signature.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ex_data.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ffc/ffc_backend.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ffc/ffc_dh.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ffc/ffc_key_generate.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ffc/ffc_key_validate.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ffc/ffc_params_generate.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ffc/ffc_params_validate.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ffc/ffc_params.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/getenv.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/hmac/hmac.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/http/http_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/http/http_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/http/http_client.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/init.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/initthread.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/kdf/kdf_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/lhash/lh_stats.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/lhash/lhash.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/md5/md5_dgst.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/md5/md5_one.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/md5/md5_sha1.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/mem.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/mem_clr.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/mem_sec.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/modes/cbc128.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/modes/ccm128.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/modes/cfb128.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/modes/ctr128.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/modes/cts128.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/modes/gcm128.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/modes/ocb128.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/modes/ofb128.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/modes/wrap128.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/modes/xts128.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/o_dir.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/o_fopen.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/o_init.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/o_str.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/o_time.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/objects/o_names.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/objects/obj_dat.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/objects/obj_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/objects/obj_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/objects/obj_xref.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/packet.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/param_build.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/param_build_set.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/params.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/params_dup.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/params_from_text.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/passphrase.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pem/pem_all.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pem/pem_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pem/pem_info.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pem/pem_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pem/pem_oth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pem/pem_pk8.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pem/pem_pkey.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pem/pem_sign.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pem/pem_x509.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pem/pem_xaux.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pem/pvkfmt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs12/p12_add.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs12/p12_asn.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs12/p12_attr.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs12/p12_crpt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs12/p12_crt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs12/p12_decr.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs12/p12_init.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs12/p12_key.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs12/p12_kiss.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs12/p12_mutl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs12/p12_npas.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs12/p12_p8d.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs12/p12_p8e.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs12/p12_sbag.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs12/p12_utl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs12/pk12err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs7/bio_pk7.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs7/pk7_asn1.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs7/pk7_attr.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs7/pk7_doit.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs7/pk7_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs7/pk7_mime.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs7/pk7_smime.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/pkcs7/pkcs7err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/provider.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/provider_core.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/provider_conf.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/provider_child.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/provider_predefined.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/property/property_string.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/property/property_query.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/property/property_parse.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/property/property_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/property/property.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/property/defn_cache.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/poly1305/poly1305.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/punycode.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rand/prov_seed.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rand/rand_egd.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rand/rand_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rand/rand_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rand/rand_meth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rand/rand_pool.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_ameth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_asn1.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_backend.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_chk.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_crpt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_depr.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_gen.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_meth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_mp.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_mp_names.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_none.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_oaep.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_ossl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_pk1.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_pmeth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_prn.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_pss.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_saos.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_schemes.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_sign.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_sp800_56b_check.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_sp800_56b_gen.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_x931.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/rsa/rsa_x931g.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/sha/keccak1600.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/sha/sha1_one.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/sha/sha1dgst.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/sha/sha256.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/sha/sha512.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/sha/sha3.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/self_test_core.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/siphash/siphash.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/sm2/sm2_crypt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/sm2/sm2_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/sm2/sm2_key.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/sm2/sm2_sign.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/sm3/legacy_sm3.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/sm3/sm3.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/sm4/sm4.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/sparse_array.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/stack/stack.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/store/store_meth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/threads_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/threads_none.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/threads_pthread.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/threads_win.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/trace.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/txt_db/txt_db.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ui/ui_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ui/ui_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ui/ui_null.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ui/ui_openssl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/ui/ui_util.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/uid.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/by_dir.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/by_file.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/t_crl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/t_req.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/t_x509.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509_att.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509_cmp.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509_d2.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509_def.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509_ext.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509_lu.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509_meth.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509_obj.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509_r2x.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509_req.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509_set.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509_trust.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509_txt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509_v3.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509_vfy.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509_vpm.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509cset.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509name.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509rset.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509spki.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x509type.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x_all.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x_attrib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x_crl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x_exten.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x_name.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x_pubkey.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x_req.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x_x509.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/x_x509a.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/pcy_cache.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/pcy_data.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/pcy_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/pcy_map.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/pcy_node.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/pcy_tree.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_addr.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_admis.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_akeya.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_akid.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_asid.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_bcons.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_bitst.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_conf.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_cpols.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_crld.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_enum.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_extku.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_genn.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_ia5.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_info.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_int.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_ist.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_lib.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_ncons.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_pci.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_pcia.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_pcons.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_pku.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_pmaps.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_prn.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_purp.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_san.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_skid.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_sxnet.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_tlsf.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_utf8.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3_utl.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/crypto/x509/v3err.c

        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/baseprov.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/defltprov.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/legacyprov.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/nullprov.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/prov_running.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/common/bio_prov.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/common/capabilities.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/common/der/der_ec_key.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/common/der/der_ec_sig.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/common/der/der_ecx_key.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/common/der/der_rsa_key.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/common/der/der_rsa_sig.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/common/der/der_sm2_key.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/common/der/der_sm2_sig.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/common/digest_to_nid.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/common/provider_err.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/common/provider_ctx.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/common/provider_seeding.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/common/provider_util.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/common/securitycheck_default.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/common/securitycheck.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/asymciphers/sm2_enc.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/asymciphers/rsa_enc.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/ciphercommon_hw.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/ciphercommon_gcm_hw.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/ciphercommon_gcm.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/ciphercommon_ccm_hw.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/ciphercommon_ccm.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/ciphercommon_block.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/ciphercommon.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_null.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_cts.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_aes.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_aes_cbc_hmac_sha.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_aes_cbc_hmac_sha1_hw.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_aes_cbc_hmac_sha256_hw.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_aes_ccm.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_aes_ccm_hw.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_aes_cbc_hmac_sha.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_aes_cbc_hmac_sha1_hw.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_aes_cbc_hmac_sha256_hw.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_aes_gcm_hw.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_aes_hw.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_aes_gcm.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_aes_xts_hw.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_aes_xts_fips.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_aes_xts.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_aes_wrp.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_chacha20.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_chacha20_hw.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_chacha20_poly1305_hw.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_chacha20_poly1305.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_sm4.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/ciphers/cipher_sm4_hw.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/digests/digestcommon.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/digests/sm3_prov.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/digests/sha3_prov.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/digests/sha2_prov.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/digests/null_prov.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/digests/md5_sha1_prov.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/digests/md5_prov.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/encode_decode/encode_key2text.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/encode_decode/encode_key2ms.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/encode_decode/encode_key2blob.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/encode_decode/encode_key2any.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/encode_decode/decode_spki2typespki.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/encode_decode/decode_pvk2key.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/encode_decode/decode_pem2der.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/encode_decode/decode_msblob2key.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/encode_decode/decode_epki2pki.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/encode_decode/decode_der2key.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/encode_decode/endecoder_common.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/exchange/dh_exch.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/exchange/ecdh_exch.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/exchange/ecx_exch.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/exchange/kdf_exch.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/macs/siphash_prov.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/macs/kmac_prov.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/macs/hmac_prov.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/macs/gmac_prov.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/macs/poly1305_prov.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/keymgmt/dh_kmgmt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/keymgmt/ec_kmgmt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/keymgmt/ecx_kmgmt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/keymgmt/kdf_legacy_kmgmt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/keymgmt/mac_legacy_kmgmt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/keymgmt/rsa_kmgmt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/kem/rsa_kem.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/kdfs/x942kdf.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/kdfs/tls1_prf.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/kdfs/sskdf.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/kdfs/sshkdf.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/kdfs/scrypt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/kdfs/pkcs12kdf.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/kdfs/pbkdf2_fips.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/kdfs/pbkdf2.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/kdfs/krb5kdf.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/kdfs/kbkdf.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/kdfs/hkdf.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/rands/seeding/rand_win.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/rands/seeding/rand_unix.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/rands/seeding/rand_tsc.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/rands/seeding/rand_cpu_x86.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/rands/test_rng.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/rands/seed_src.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/rands/drbg_hmac.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/rands/drbg_hash.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/rands/drbg_ctr.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/rands/drbg.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/rands/crngt.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/signature/ecdsa_sig.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/signature/eddsa_sig.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/signature/mac_legacy_sig.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/signature/rsa_sig.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/providers/implementations/signature/sm2_sig.c

        ${CMAKE_CURRENT_LIST_DIR}/openssl/ssl/record/tls_pad.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl/ssl/s3_cbc.c

        ${CMAKE_CURRENT_LIST_DIR}/openssl_gen/der_digests_gen.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl_gen/der_ec_gen.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl_gen/der_ecx_gen.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl_gen/der_rsa_gen.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl_gen/der_sm2_gen.c
        ${CMAKE_CURRENT_LIST_DIR}/openssl_gen/der_wrap_gen.c
        ${CMAKE_CURRENT_LIST_DIR}/rand_pool.c
        ${CMAKE_CURRENT_LIST_DIR}/ossl_store.c
)